--- a/clock.css
+++ b/clock.css
@@ -2,7 +2,6 @@ html {
 	background-color: #000;
 	color: #fff;
 	font-family: Helvetica, sans-serif;
-	font-weight: 600;
 }
 body {
 	display: flex;
@@ -11,11 +10,18 @@ body {
 	height: 100vh;
 	margin: 0;
 }
+
 #time {
 	font-size: 30vw;
 }
 #time .delim {
 	display: inline-block;
-	font-weight: 400;
 	transform: translateY(-.1em);
+}
+
+#date {
+	border-bottom: 1px solid;
+	font-size: 5vw;
+	padding-bottom: 1rem;
+	text-align: right;
 }
