--- a/clock.css
+++ b/clock.css
@@ -12,7 +12,7 @@ body {
 }
 
 #time {
-	font-size: 30vw;
+	font-size: 40vw;
 	line-height: 1;
 }
 #time .delim {
@@ -22,7 +22,16 @@ body {
 
 #date {
 	border-bottom: 1px solid;
-	font-size: 5vw;
+	font-size: 8vw;
 	padding-bottom: 1rem;
 	text-align: right;
+}
+
+@media (min-width: 600px) {
+	#time {
+		font-size: 30vw;
+	}
+	#date {
+		font-size: 5vw;
+	}
 }
